# capisco

./: .gitignore  README.md  TODO.md  build_decks.py  fetch_data.py  pipeline.py  pyproject.toml  sample_sentences.json  viewer.html
.github/workflows/: pages.yml
configs/: a1.yml  a2.yml  b1.yml  b2.yml  c1.yml  c2.yml
dev/: disagreements.py
src/capisco/: build_decks.py  fetch_data.py  pipeline.py
